Add The Responsible project.

--- a/src/index.html
+++ b/src/index.html
@@ -188,6 +188,54 @@
 
           <article class="project">
             <div class="display">
+              <a href="https://github.com/greenheart/text-game" target="_blank" rel="noopener noreferrer">
+                <img alt="The Responsible" src="images/the-responsible.png">
+              </a>
+              <div class="arrow arrow-prev"></div>
+              <div class="arrow arrow-next"></div>
+            </div>
+
+            <hr>
+
+            <div class="project-info">
+              <h3><a href="https://github.com/greenheart/text-game" target="_blank" rel="noopener noreferrer">The Responsible</a></h3>
+              <div class="project-tech">
+                <h4>Technologies</h4>
+                <ul class="tech-list">
+                  <li>JavaScript</li>
+                  <li>CSS</li>
+                  <li>HTML</li>
+                </ul>
+                <p class="year">2018</p>
+              </div>
+
+              <div class="project-description">
+                <p>
+                  At one point, I wanted to be an author. At another, I wanted to be a developer. So I figured, why not just do both?
+                </p>
+                <p>
+                  This is an exploration of interactive storytelling.
+                  How to make characters and environments come alive, without using much more than a vivid language.
+                  Instead of fancy graphics, this game uses one of the best rendering engines available; the human imagination.
+                </p>
+                <p>
+                  Since this game is built from the ground up, it's also a game engine.
+                  Several parts of this project could theoretically be reused for another text game with a completely different setting and story.
+                  This was not intentional during development, but rather a consequence of how the (at the time) most sane design choices ended up creating a modular project, where the content itself can be replaced.
+                </p>
+                <p>
+                  Another fun part of this project is that ideas, planning and progress all were tracked in Git, making it easy to see design thoughts at a given time.
+                </p>
+                <p style="font-size: 1.1rem;">
+                  <a href="https://samuelplumppu.se/text-game" target="_blank">Play the prototype</a>
+                </p>
+              </div>
+            </div>
+          </article>
+
+
+          <article class="project">
+            <div class="display">
               <a href="https://github.com/teknik-eksjo/chronos" target="_blank" rel="noopener noreferrer">
                 <img alt="Screenshot from Chronos, the scheduling app" src="images/chronos-base-schedule.jpeg">
               </a>
