Add project Prime or Not.
Optimized images.

Also update link text for The Responsible.

--- a/src/index.html
+++ b/src/index.html
@@ -227,7 +227,53 @@
                   Another fun part of this project is that ideas, planning and progress all were tracked in Git, making it easy to see design thoughts at a given time.
                 </p>
                 <p style="font-size: 1.1rem;">
-                  <a href="https://samuelplumppu.se/text-game" target="_blank">Play the prototype</a>
+                  <a href="https://samuelplumppu.se/text-game" target="_blank">Experience the first chapter of the story</a>
+                </p>
+              </div>
+            </div>
+          </article>
+
+
+          <article class="project">
+            <div class="display">
+              <a href="https://github.com/greenheart/numbers" target="_blank" rel="noopener noreferrer">
+                <img alt="Prime or Not?" src="images/numbers-prime-or-not.png">
+              </a>
+              <div class="arrow arrow-prev"></div>
+              <div class="arrow arrow-next"></div>
+            </div>
+
+            <hr>
+
+            <div class="project-info">
+              <h3><a href="https://github.com/greenheart/numbers" target="_blank" rel="noopener noreferrer">Prime or Not?</a></h3>
+              <div class="project-tech">
+                <h4>Technologies</h4>
+                <ul class="tech-list">
+                  <li>JavaScript</li>
+                  <li>CSS</li>
+                  <li>HTML</li>
+                </ul>
+                <p class="year">2017</p>
+              </div>
+
+              <div class="project-description">
+                <p>
+                  Starting as a joke about how it would be to learn prime numbers in an app with a two button interface similar to Tinder, this idea turned into an actual prototype.
+                </p>
+                <p>
+                  To work on older phones, I only used well supported web technologies.
+                  Of course, a proper build tool setup with transpiling, polyfills and vendor-prefixing is ideal for a serious project where you want to use new, improved web platform features.
+                  But skipping all distractions allowed me to focus on core features and create most of this prototype in an evening.
+                  Then I could get almost instant user feedback.
+                </p>
+                <p>
+                  Even though I put some thought into the UX and designed the UI on paper before I wrote any code, this prototype has some issues that would be fixed in a full version.
+                  But after all, this was a really fun design project, thanks to the fast release and iteration.
+                  I'm especially happy with the UI design for the bottom section.
+                </p>
+                <p style="font-size: 1.1rem;">
+                  <a href="https://samuelplumppu.se/numbers" target="_blank">Do you know your primes?</a>
                 </p>
               </div>
             </div>
