--- a/src/index.html
+++ b/src/index.html
@@ -592,13 +592,13 @@
               </div>
             </div>
             <div class="skill">
-                <h4>Meteor</h4>
+                <h4>PHP</h4>
                 <div class="bar">
                     <div style="width: 40%;"></div>
                 </div>
             </div>
             <div class="skill">
-              <h4>ASP.NET MVC</h4>
+              <h4>Docker</h4>
               <div class="bar">
                 <div style="width: 20%;"></div>
               </div>
