--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Swedish orienteer and software developer">
+    <meta name="description" content="Swedish orienteer and systems developer">
     <meta name="author" content="Samuel Plumppu">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200|Poiret+One" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href="images/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
     <link href="images/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
-    <title>Samuel Plumppu | Software Developer</title>
+    <title>Samuel Plumppu | Systems Developer</title>
   </head>
   <body>
   <div class="bg"></div>
@@ -60,7 +60,7 @@
         <img alt="Samuel Plumppu" src="images/samuel.jpg">
 
         <div id="about-text">
-            <p>I'm Samuel, a 21-year-old orienteer, software developer and open source enthusiast, currently living in Gothenburg, Sweden.</p>
+            <p>I'm Samuel, a 21-year-old orienteer, systems developer and open source enthusiast, currently living in Gothenburg, Sweden.</p>
             <p>
                 I'm a creator who enjoys solving problems, learning and constantly challenging my abilities.
                 Another thing I really love is to share my knowledge and help others.
