Update broken link.

--- a/src/index.html
+++ b/src/index.html
@@ -633,7 +633,7 @@
             <a href="https://linkedin.com/in/samuelplumppu" >
               <img src="images/linkedin-logo.png" alt="LinkedIn Logo">
             </a>
-            <a href="https://freecodecamp.com/Greenheart" >
+            <a href="https://freecodecamp.org/Greenheart" >
               <img alt="freeCodeCamp Logo" src="images/fcc-puck-green.svg">
             </a>
             <a href="https://codepen.io/Greenheart" >
