--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-3ff3e48d.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-7d941098.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-00da6188.js">
-		<link rel="modulepreload" href="/./_app/pages/index.svelte-f27c4077.js">
+		<link rel="modulepreload" href="/./_app/start-45ccd8ee.js">
+		<link rel="modulepreload" href="/./_app/chunks/vendor-5b441d99.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-fb40b57a.js">
+		<link rel="modulepreload" href="/./_app/pages/index.svelte-fb0f5c6f.js">
 		<link rel="stylesheet" href="/./_app/assets/start-0826e215.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-50268c37.css">
+		<link rel="stylesheet" href="/./_app/assets/vendor-b16a5cb9.css">
+		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-5100487d.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-3ff3e48d.js";
+			import { start } from "/./_app/start-45ccd8ee.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -30,8 +31,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-00da6188.js"),
-						import("/./_app/pages/index.svelte-f27c4077.js")
+						import("/./_app/pages/__layout.svelte-fb40b57a.js"),
+						import("/./_app/pages/index.svelte-fb0f5c6f.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -62,9 +63,9 @@
             <span class="whitespace-nowrap">Fullstack Developer.</span></div></h2></section>
 
 <section class="grid grid-cols-1 max-w-prose mx-auto"><p class="text-xl sm:text-2xl mb-4">For 5+ years, I&#39;ve worked with teams of designers and developers to
-        maximize our positive impact.
+        maximize our positive impact in the world.
     </p>
-    <p class="text-xl sm:text-2xl mb-4">Passionate about how open source communities can support a sustainable
+    <p class="text-xl sm:text-2xl mb-4">I&#39;m passionate about how open source communities can support a sustainable
         future, where both humanity and the living planet thrive.
     </p>
 
@@ -79,9 +80,9 @@
 <section class="flex flex-col h-80 xs:h-60 sm:h-56 items-center"><h2 class="mb-6 text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none justify-self-center text-center">My Tech Stack
     </h2>
 
-    <div class="grid grid-cols-3 w-72 mx-auto mb-6 gap-2"><button class="px-3 py-2 focus:outline-none hover:bg-beauBlue hover:shadow-lg rounded-sm">Learning
+    <div class="grid grid-cols-3 w-72 mx-auto mb-6 gap-2"><button class="px-3 py-2 focus:outline-none hover:bg-beauBlue hover:shadow-lg rounded-sm">Past
                 </button><button class="bg-beauBlue px-3 py-2 focus:outline-none shadow-lg rounded-sm">Current
-                </button><button class="px-3 py-2 focus:outline-none hover:bg-beauBlue hover:shadow-lg rounded-sm">Past
+                </button><button class="px-3 py-2 focus:outline-none hover:bg-beauBlue hover:shadow-lg rounded-sm">Learning
                 </button></div>
 
     
@@ -119,7 +120,10 @@
 
 </div>
 
-<footer class="p-4 text-center mt-8 max-w-6xl mx-auto">Samuel Plumppu © 2015 - 2021</footer>
+<footer class="p-4 text-center mt-8 max-w-6xl mx-auto font-extralight">Samuel Plumppu © 2015 - 2021
+
+    <div class="flex justify-center space-x-4 items-center my-8"><a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer" class="w-10 h-10"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="svelte-heylkm"><path d="M16 5.343c-6.196 0-11.219 5.023-11.219 11.219 0 4.957 3.214 9.162 7.673 10.645 0.561 0.103 0.766-0.244 0.766-0.54 0-0.267-0.010-1.152-0.016-2.088-3.12 0.678-3.779-1.323-3.779-1.323-0.511-1.296-1.246-1.641-1.246-1.641-1.020-0.696 0.077-0.682 0.077-0.682 1.126 0.078 1.72 1.156 1.72 1.156 1.001 1.715 2.627 1.219 3.265 0.931 0.102-0.723 0.392-1.219 0.712-1.498-2.49-0.283-5.11-1.246-5.11-5.545 0-1.226 0.438-2.225 1.154-3.011-0.114-0.285-0.501-1.426 0.111-2.97 0 0 0.941-0.301 3.085 1.15 0.894-0.25 1.854-0.373 2.807-0.377 0.953 0.004 1.913 0.129 2.809 0.379 2.14-1.453 3.083-1.15 3.083-1.15 0.613 1.545 0.227 2.685 0.112 2.969 0.719 0.785 1.153 1.785 1.153 3.011 0 4.31-2.624 5.259-5.123 5.537 0.404 0.348 0.761 1.030 0.761 2.076 0 1.5-0.015 2.709-0.015 3.079 0 0.299 0.204 0.648 0.772 0.538 4.455-1.486 7.666-5.69 7.666-10.645 0-6.195-5.023-11.219-11.219-11.219z"></path></svg></a>
+        <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" class="w-8 h-8"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svelte-heylkm"><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path></svg></a></div></footer>
 
 
 
