--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>
         Samuel Plumppu | Sustainability Entrepreneur &amp; Fullstack Developer
     </title>
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-45ccd8ee.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-5b441d99.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-fb40b57a.js">
-		<link rel="modulepreload" href="/./_app/pages/index.svelte-fb0f5c6f.js">
+		<link rel="modulepreload" href="/./_app/start-c5ef2924.js">
+		<link rel="modulepreload" href="/./_app/chunks/vendor-aec70652.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-c66d2058.js">
+		<link rel="modulepreload" href="/./_app/pages/index.svelte-d9108811.js">
 		<link rel="stylesheet" href="/./_app/assets/start-0826e215.css">
 		<link rel="stylesheet" href="/./_app/assets/vendor-b16a5cb9.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-5100487d.css">
+		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-5b282fad.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-45ccd8ee.js";
+			import { start } from "/./_app/start-c5ef2924.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -31,8 +32,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-fb40b57a.js"),
-						import("/./_app/pages/index.svelte-fb0f5c6f.js")
+						import("/./_app/pages/__layout.svelte-c66d2058.js"),
+						import("/./_app/pages/index.svelte-d9108811.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -43,9 +44,10 @@
 				}
 			});
 		</script>
-    </head>
-    <body>
-        <div id="svelte">
+</head>
+
+<body>
+    <div id="svelte">
 
 
 
@@ -53,6 +55,8 @@
 
 
 
+
+<div style="" id="bg"><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23fbbf24'/%3E%3Cstop offset='1' stop-color='%2334d399'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%2398c95f'/%3E%3Cstop offset='1' stop-color='%2334d399'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg transform='translate(1040 0)'%3E%3Cg transform='translate(0 1350)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(-352.8 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0.84' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E" alt="gradient circles graphic background"></div>
 
 <div class="container mx-auto max-w-6xl p-4 mt-8"><img src="/images/samuel.png" alt="Samuel" class="rounded-full shadow-2xl mx-auto w-32 h-32 sm:w-40 sm:h-40 mb-8">
 
@@ -65,19 +69,19 @@
 <section class="grid grid-cols-1 max-w-prose mx-auto"><p class="text-xl sm:text-2xl mb-4">For 5+ years, I&#39;ve worked with teams of designers and developers to
         maximize our positive impact in the world.
     </p>
-    <p class="text-xl sm:text-2xl mb-4">I&#39;m passionate about how open source communities can support a sustainable
-        future, where both humanity and the living planet thrive.
+    <p class="text-xl sm:text-2xl mb-4">I&#39;m passionate about how open source communities can support a
+        sustainable future, where both humanity and the living planet thrive.
     </p>
 
-    <h2 class="mt-2 text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none justify-self-center text-center">Let&#39;s co-create a sustainable future!
+    <h2 class="mt-2 text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none text-center">Let&#39;s co-create a sustainable future!
     </h2>
 
     
-    <a href="mailto:samuel.plumppu@gmail.com" target="_blank" rel="noopener noreferrer" class="mt-6 bg-gradient-to-tr from-green-400 to-blue-500 py-3 px-8 inline-block rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black"><span class="filter drop-shadow-lg">Get in touch</span></a></section>
+    <a href="mailto:samuel.plumppu@gmail.com" target="_blank" rel="noopener noreferrer" class="mt-6 bg-gradient-to-tr from-green-400 to-blue-500 py-3 px-8 inline-flex rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black justify-center"><span class="filter drop-shadow-lg whitespace-nowrap">Get in touch</span></a></section>
 
 <hr class="my-16 max-w-sm mx-auto border-prussianBlue">
 
-<section class="flex flex-col h-80 xs:h-60 sm:h-56 items-center"><h2 class="mb-6 text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none justify-self-center text-center">My Tech Stack
+<section class="flex flex-col h-80 xs:h-60 sm:h-56 items-center"><h2 class="mb-6 text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none text-center">My Tech Stack
     </h2>
 
     <div class="grid grid-cols-3 w-72 mx-auto mb-6 gap-2"><button class="px-3 py-2 focus:outline-none hover:bg-beauBlue hover:shadow-lg rounded-sm">Past
@@ -90,7 +94,7 @@
 
 <hr class="my-16 max-w-sm mx-auto border-prussianBlue">
 
-<section class="max-w-prose mx-auto"><h2 class="text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none justify-self-center text-center mb-6">Additional Skills
+<section class="max-w-prose mx-auto"><h2 class="text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none text-center mb-6">Additional Skills
     </h2>
 
     <p class="text-xl sm:text-2xl mb-8">Working with early stage startups and teams with limited resources has
@@ -98,12 +102,12 @@
         to contribute with more than just code to help the team succeed.
     </p>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 justify-items-center"><ul class="font-extralight tracking-wide flex flex-col items-center space-y-2 bg-beauBlue p-4 w-80 sm:w-72 shadow-lg rounded-sm"><li>Product strategy</li>
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 justify-items-center"><ul class="font-light tracking-wide flex flex-col items-center space-y-2 bg-beauBlue p-4 w-80 sm:w-72 shadow-lg rounded-sm"><li>Product strategy</li>
             <li>Attention to detail</li>
             <li>Mentorship &amp; team growth</li>
             <li>Design systems</li>
             <li>Community building</li></ul>
-        <ul class="font-extralight tracking-wide flex flex-col items-center space-y-2 bg-beauBlue p-4 w-80 sm:w-72 shadow-lg rounded-sm"><li>UI/UX design</li>
+        <ul class="font-light tracking-wide flex flex-col items-center space-y-2 bg-beauBlue p-4 w-80 sm:w-72 shadow-lg rounded-sm"><li>UI/UX design</li>
             <li>Humane tech &amp; ethical design</li>
             <li>Quick learning</li>
             <li>Modern web build tools</li>
@@ -111,16 +115,16 @@
 
 <hr class="my-16 max-w-sm mx-auto border-prussianBlue">
 
-<section class="grid text-center justify-center"><h2 class="text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none justify-self-center text-center">Let&#39;s co-create a sustainable future!
+<section class="grid text-center justify-center grid-cols-1"><h2 class="text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none text-center">Let&#39;s co-create a sustainable future!
     </h2>
 
     
-    <a href="mailto:samuel.plumppu@gmail.com" target="_blank" rel="noopener noreferrer" class="mt-6 bg-gradient-to-tr from-green-400 to-blue-500 py-3 px-8 inline-block rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black"><span class="filter drop-shadow-lg">Get in touch</span></a></section>
+    <a href="mailto:samuel.plumppu@gmail.com" target="_blank" rel="noopener noreferrer" class="mt-6 bg-gradient-to-tr from-green-400 to-blue-500 py-3 px-8 inline-flex rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black justify-center"><span class="filter drop-shadow-lg whitespace-nowrap">Get in touch</span></a></section>
 
 
 </div>
 
-<footer class="p-4 text-center mt-8 max-w-6xl mx-auto font-extralight">Samuel Plumppu © 2015 - 2021
+<footer class="p-4 text-center mt-8 max-w-6xl mx-auto font-light">Samuel Plumppu © 2015 - 2021
 
     <div class="flex justify-center space-x-4 items-center my-8"><a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer" class="w-10 h-10"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="svelte-heylkm"><path d="M16 5.343c-6.196 0-11.219 5.023-11.219 11.219 0 4.957 3.214 9.162 7.673 10.645 0.561 0.103 0.766-0.244 0.766-0.54 0-0.267-0.010-1.152-0.016-2.088-3.12 0.678-3.779-1.323-3.779-1.323-0.511-1.296-1.246-1.641-1.246-1.641-1.020-0.696 0.077-0.682 0.077-0.682 1.126 0.078 1.72 1.156 1.72 1.156 1.001 1.715 2.627 1.219 3.265 0.931 0.102-0.723 0.392-1.219 0.712-1.498-2.49-0.283-5.11-1.246-5.11-5.545 0-1.226 0.438-2.225 1.154-3.011-0.114-0.285-0.501-1.426 0.111-2.97 0 0 0.941-0.301 3.085 1.15 0.894-0.25 1.854-0.373 2.807-0.377 0.953 0.004 1.913 0.129 2.809 0.379 2.14-1.453 3.083-1.15 3.083-1.15 0.613 1.545 0.227 2.685 0.112 2.969 0.719 0.785 1.153 1.785 1.153 3.011 0 4.31-2.624 5.259-5.123 5.537 0.404 0.348 0.761 1.030 0.761 2.076 0 1.5-0.015 2.709-0.015 3.079 0 0.299 0.204 0.648 0.772 0.538 4.455-1.486 7.666-5.69 7.666-10.645 0-6.195-5.023-11.219-11.219-11.219z"></path></svg></a>
         <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" class="w-8 h-8"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svelte-heylkm"><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path></svg></a></div></footer>
@@ -129,5 +133,6 @@
 
 	
 </div>
-    </body>
+</body>
+
 </html>
