--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-9161ccfa.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-5b441d99.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-96bfd7af.js">
-		<link rel="modulepreload" href="/./_app/pages/index.svelte-cbd73ea5.js">
+		<link rel="modulepreload" href="/./_app/start-9cd426ff.js">
+		<link rel="modulepreload" href="/./_app/chunks/vendor-fb5041ca.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-e4772983.js">
+		<link rel="modulepreload" href="/./_app/chunks/Link-c284b0c1.js">
+		<link rel="modulepreload" href="/./_app/pages/index.svelte-b139f5b9.js">
 		<link rel="stylesheet" href="/./_app/assets/start-0826e215.css">
-		<link rel="stylesheet" href="/./_app/assets/vendor-b16a5cb9.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-89bbfbf1.css">
+		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-790c4dc6.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-9161ccfa.js";
+			import { start } from "/./_app/start-9cd426ff.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -32,8 +32,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-96bfd7af.js"),
-						import("/./_app/pages/index.svelte-cbd73ea5.js")
+						import("/./_app/pages/__layout.svelte-e4772983.js"),
+						import("/./_app/pages/index.svelte-b139f5b9.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -52,30 +52,28 @@
 
 
 
+<header class="flex flex-1 justify-between p-4 max-w-6xl mx-auto"><a href="/" style="" class="link">Samuel Plumppu</a>
+    <nav class="flex space-x-4"><a href="/blog" style="" class="link">Blog</a></nav></header>
 
-
-
-
-<div class="container mx-auto max-w-6xl p-4 mt-8"><img src="/images/samuel.png" alt="Samuel" class="rounded-full shadow-2xl mx-auto w-32 h-32 sm:w-40 sm:h-40 mb-8">
+<div class="container mx-auto max-w-6xl p-4"><img src="/images/samuel.png" alt="Samuel" class="rounded-full shadow-2xl mx-auto w-32 h-32 sm:w-40 sm:h-40 my-8">
 
 <section class="grid text-center justify-center"><h1 class="text-4xl xs:text-5xl sm:text-6xl lg:text-7xl leading-none font-black tracking-tight mb-8">Hey! I&#39;m Samuel.
     </h1>
     <h2 class="text-xl sm:text-3xl lg:text-4xl leading-6 font-black tracking-tight mb-12"><div class="bg-mantis transform -skew-y-1 p-2 shadow-2xl"><span class="whitespace-nowrap">Sustainability Entrepreneur</span>
             &amp;
-            <span class="whitespace-nowrap">Fullstack Developer.</span></div></h2></section>
+            <span class="whitespace-nowrap">Fullstack Developer</span></div></h2></section>
 
-<section class="grid grid-cols-1 max-w-prose mx-auto"><p class="text-xl sm:text-2xl mb-4">For 5+ years, I&#39;ve worked with teams of designers and developers to
+<section class="grid grid-cols-1 max-w-prose mx-auto"><p class="text-xl sm:text-2xl mb-4">Since 2015, I&#39;ve worked with teams of designers and developers to
         maximize our positive impact in the world.
     </p>
     <p class="text-xl sm:text-2xl mb-4">I&#39;m passionate about how open source communities can support a
         sustainable future, where both humanity and the living planet thrive.
-    </p>
+    </p></section>
 
-    <h2 class="mt-2 text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none text-center">Let&#39;s co-create a sustainable future!
+<div class="grid pt-2"><h2 class="text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none text-center">Let&#39;s co-create a sustainable future!
     </h2>
 
-    
-    <a href="mailto:samuel.plumppu@gmail.com" target="_blank" rel="noopener noreferrer" class="mt-6 bg-mantis  py-3 px-8 inline-flex rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black justify-center"><span class="whitespace-nowrap">Get in touch</span></a></section>
+    <a href="#contact" target="_blank" rel="noopener noreferrer" class="mt-6 bg-mantis  py-3 px-8 inline-flex rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black justify-center"><span class="whitespace-nowrap">Contact me</span></a></div>
 
 <hr class="my-16 max-w-sm mx-auto border-ming">
 
@@ -111,21 +109,19 @@
             <li>Modern web build tools</li>
             <li>Improved development practices</li></ul></div></section>
 
-<hr class="my-16 max-w-sm mx-auto border-ming">
-
-<section class="grid text-center justify-center grid-cols-1"><h2 class="text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none text-center">Let&#39;s co-create a sustainable future!
-    </h2>
-
-    
-    <a href="mailto:samuel.plumppu@gmail.com" target="_blank" rel="noopener noreferrer" class="mt-6 bg-mantis  py-3 px-8 inline-flex rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black justify-center"><span class="whitespace-nowrap">Get in touch</span></a></section>
-
 
 </div>
 
-<footer class="p-4 text-center mt-8 max-w-6xl mx-auto font-light">Samuel Plumppu © 2015 - 2021
+<footer class="container px-4 pb-4 text-center max-w-6xl mx-auto font-light"><hr class="my-16 max-w-sm mx-auto border-ming" id="contact">
+    <h2 class="text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none mb-6">Let&#39;s co-create a sustainable future!
+    </h2>
 
-    <div class="flex justify-center space-x-4 items-center my-8"><a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer" class="w-10 h-10"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="svelte-heylkm"><path d="M16 5.343c-6.196 0-11.219 5.023-11.219 11.219 0 4.957 3.214 9.162 7.673 10.645 0.561 0.103 0.766-0.244 0.766-0.54 0-0.267-0.010-1.152-0.016-2.088-3.12 0.678-3.779-1.323-3.779-1.323-0.511-1.296-1.246-1.641-1.246-1.641-1.020-0.696 0.077-0.682 0.077-0.682 1.126 0.078 1.72 1.156 1.72 1.156 1.001 1.715 2.627 1.219 3.265 0.931 0.102-0.723 0.392-1.219 0.712-1.498-2.49-0.283-5.11-1.246-5.11-5.545 0-1.226 0.438-2.225 1.154-3.011-0.114-0.285-0.501-1.426 0.111-2.97 0 0 0.941-0.301 3.085 1.15 0.894-0.25 1.854-0.373 2.807-0.377 0.953 0.004 1.913 0.129 2.809 0.379 2.14-1.453 3.083-1.15 3.083-1.15 0.613 1.545 0.227 2.685 0.112 2.969 0.719 0.785 1.153 1.785 1.153 3.011 0 4.31-2.624 5.259-5.123 5.537 0.404 0.348 0.761 1.030 0.761 2.076 0 1.5-0.015 2.709-0.015 3.079 0 0.299 0.204 0.648 0.772 0.538 4.455-1.486 7.666-5.69 7.666-10.645 0-6.195-5.023-11.219-11.219-11.219z"></path></svg></a>
-        <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" class="w-8 h-8"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svelte-heylkm"><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path></svg></a></div></footer>
+    <a href="#" class="bg-mantis  py-3 px-8 inline-flex rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black justify-center"><span class="whitespace-nowrap">Show Email</span></a>
+
+    <p class="mt-8">Samuel Plumppu © 2015 - 2021</p>
+
+    <div class="flex justify-center space-x-4 items-center my-8"><a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer" aria-label="See my profile on GitHub"><img src="/_app/assets/github.4ea99f48.svg" alt="GitHub" class="w-8 h-8"></a>
+        <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn"><img src="/_app/assets/linkedin.9dac6797.svg" alt="LinkedIn" class="w-8 h-8"></a></div></footer>
 
 
 
