Workaround for broken animation disabling. Don't know why it failed but this works well.

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,4 +10,16 @@
     <div id="svelte">%svelte.body%</div>
 </body>
 
+<style>
+    @media (prefers-reduced-motion: reduce) {
+        *,
+        *::before,
+        *::after {
+            transition-duration: 0.01ms !important;
+            animation-duration: 0.01ms !important;
+            animation-iteration-count: 1 !important;
+            animation-delay: 0.01ms !important;
+        }
+    }
+</style>
 </html>
