--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-3d60917e.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-d3a3d99b.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-9f053d9f.js">
-		<link rel="modulepreload" href="/./_app/chunks/Link-296b70ba.js">
-		<link rel="modulepreload" href="/./_app/pages/index.svelte-03c33010.js">
-		<link rel="stylesheet" href="/./_app/assets/start-0826e215.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-41c8e93d.css">
+		<link rel="modulepreload" href="/_app/start-35d73ea4.js">
+		<link rel="modulepreload" href="/_app/chunks/vendor-49daea19.js">
+		<link rel="modulepreload" href="/_app/pages/__layout.svelte-c10e0891.js">
+		<link rel="modulepreload" href="/_app/chunks/Link-666b6af4.js">
+		<link rel="modulepreload" href="/_app/pages/index.svelte-4e550cb5.js">
+		<link rel="stylesheet" href="/_app/assets/start-0826e215.css">
+		<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-eecc4014.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-3d60917e.js";
+			import { start } from "/_app/start-35d73ea4.js";
 			start({
 				target: document.querySelector("#svelte"),
-				paths: {"base":"","assets":"/."},
+				paths: {"base":"","assets":""},
 				session: {},
 				host: location.host,
 				route: true,
@@ -31,8 +31,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-9f053d9f.js"),
-						import("/./_app/pages/index.svelte-03c33010.js")
+						import("/_app/pages/__layout.svelte-c10e0891.js"),
+						import("/_app/pages/index.svelte-4e550cb5.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -51,8 +51,8 @@
 
 
 
-<header class="flex flex-1 justify-between p-4 max-w-6xl mx-auto"><a href="/" style="" class="link">Samuel Plumppu</a>
-    <nav class="flex space-x-4"><a href="/blog" style="" class="link">Blog</a></nav></header>
+<header class="flex flex-1 justify-between p-4 max-w-6xl mx-auto"><a href="/" class="link">Samuel Plumppu</a>
+    <nav class="flex space-x-4"><a href="/blog" class="link">Blog</a></nav></header>
 
 <div class="container mx-auto max-w-6xl p-4"><img src="/images/samuel.png" alt="Samuel" class="rounded-full shadow-2xl mx-auto w-32 h-32 sm:w-40 sm:h-40 my-8">
 
