--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         Samuel Plumppu | Sustainability Entrepreneur &amp; Fullstack Developer
     </title>
 	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-24ddc4e5.css">
-	<link rel="modulepreload" href="/_app/start-bef6612a.js">
+	<link rel="modulepreload" href="/_app/start-2655fa01.js">
 	<link rel="modulepreload" href="/_app/chunks/index-95479843.js">
 	<link rel="modulepreload" href="/_app/pages/__layout.svelte-7d60e4ed.js">
 	<link rel="modulepreload" href="/_app/chunks/constants-662300d2.js">
 	<link rel="modulepreload" href="/_app/chunks/Link-93d4693b.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-26748b54.js">
+	<link rel="modulepreload" href="/_app/pages/index.svelte-21baf294.js">
 	<link rel="modulepreload" href="/_app/chunks/PostListing-3633a0e3.js">
 	<link rel="modulepreload" href="/_app/chunks/Tags-f7cdfcfc.js">
 </head>
@@ -68,7 +68,7 @@
         focus on the work with the highest impact.
     </p>
 
-    <p class="text-xl sm:text-2xl mb-8">I also want solutions and experiences we create to truly bring value to
+    <p class="text-xl sm:text-2xl mb-8">I also want experiences and solutions we create to truly bring value to
         people and society. Technology is exciting, but never the end goal. This
         desire to deliver all the way helps me contribute with more than just
         code to help the team succeed.
@@ -112,10 +112,10 @@
         <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn"><img src="/images/linkedin.svg" alt="LinkedIn" class="w-8 h-8"></a></div></footer>
 
 
-		<script type="module" data-hydrate="1nhuvlx">
-		import { start } from "/_app/start-bef6612a.js";
+		<script type="module" data-hydrate="1tjmvr9">
+		import { start } from "/_app/start-2655fa01.js";
 		start({
-			target: document.querySelector('[data-hydrate="1nhuvlx"]').parentNode,
+			target: document.querySelector('[data-hydrate="1tjmvr9"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
@@ -126,7 +126,7 @@
 				error: null,
 				nodes: [
 					import("/_app/pages/__layout.svelte-7d60e4ed.js"),
-						import("/_app/pages/index.svelte-26748b54.js")
+						import("/_app/pages/index.svelte-21baf294.js")
 				],
 				params: {},
 				routeId: ""
