--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="content-security-policy" content=""><title>
         Samuel Plumppu | Sustainability Entrepreneur &amp; Fullstack Developer
     </title>
-	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-24ddc4e5.css">
-	<link rel="modulepreload" href="/_app/start-2655fa01.js">
+	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-8c78c488.css">
+	<link rel="modulepreload" href="/_app/start-c6017d27.js">
 	<link rel="modulepreload" href="/_app/chunks/index-95479843.js">
-	<link rel="modulepreload" href="/_app/pages/__layout.svelte-7d60e4ed.js">
-	<link rel="modulepreload" href="/_app/chunks/constants-662300d2.js">
-	<link rel="modulepreload" href="/_app/chunks/Link-93d4693b.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-21baf294.js">
-	<link rel="modulepreload" href="/_app/chunks/PostListing-3633a0e3.js">
-	<link rel="modulepreload" href="/_app/chunks/Tags-f7cdfcfc.js">
+	<link rel="modulepreload" href="/_app/pages/__layout.svelte-c731519f.js">
+	<link rel="modulepreload" href="/_app/chunks/constants-051b5a2a.js">
+	<link rel="modulepreload" href="/_app/chunks/Link-6777b0e1.js">
+	<link rel="modulepreload" href="/_app/pages/index.svelte-3e2e61a4.js">
+	<link rel="modulepreload" href="/_app/chunks/PostListing-26634e2e.js">
+	<link rel="modulepreload" href="/_app/chunks/Tags-2078939d.js">
 </head>
 
 <body class="bg-honeydew">
@@ -74,12 +74,12 @@
         code to help the team succeed.
     </p>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 justify-items-center"><ul class="font-light tracking-wide flex flex-col items-center space-y-2 bg-white p-4 w-80 sm:w-72 shadow-lg rounded-sm"><li>Product strategy</li>
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 justify-items-center"><ul class="font-light tracking-wide flex flex-col items-center space-y-2 bg-white p-4 w-80 sm:w-[272px] shadow-lg rounded-sm"><li>Product strategy</li>
             <li>Attention to detail</li>
             <li>Mentorship &amp; team growth</li>
             <li>Community building</li>
             <li>Design systems</li></ul>
-        <ul class="font-light tracking-wide flex flex-col items-center space-y-2 bg-white p-4 w-80 sm:w-72 shadow-lg rounded-sm"><li>UI/UX design</li>
+        <ul class="font-light tracking-wide flex flex-col items-center space-y-2 bg-white p-4 w-80 sm:w-[272px] shadow-lg rounded-sm"><li>UI/UX design</li>
             <li>Humane tech &amp; ethical design</li>
             <li>Quick learning</li>
             <li>Modern web build tools</li>
@@ -112,10 +112,10 @@
         <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn"><img src="/images/linkedin.svg" alt="LinkedIn" class="w-8 h-8"></a></div></footer>
 
 
-		<script type="module" data-hydrate="1tjmvr9">
-		import { start } from "/_app/start-2655fa01.js";
+		<script type="module" data-hydrate="dtpeit">
+		import { start } from "/_app/start-c6017d27.js";
 		start({
-			target: document.querySelector('[data-hydrate="1tjmvr9"]').parentNode,
+			target: document.querySelector('[data-hydrate="dtpeit"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
@@ -125,8 +125,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/pages/__layout.svelte-7d60e4ed.js"),
-						import("/_app/pages/index.svelte-21baf294.js")
+					import("/_app/pages/__layout.svelte-c731519f.js"),
+						import("/_app/pages/index.svelte-3e2e61a4.js")
 				],
 				params: {},
 				routeId: ""
