--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
     <meta http-equiv="content-security-policy" content=""><title>
         Samuel Plumppu | Sustainability Entrepreneur &amp; Fullstack Developer
     </title>
-	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-31c96711.css">
-	<link rel="modulepreload" href="/_app/start-71357cc1.js">
+	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-a316ab4d.css">
+	<link rel="modulepreload" href="/_app/start-53cf449b.js">
 	<link rel="modulepreload" href="/_app/chunks/index-16cdd259.js">
-	<link rel="modulepreload" href="/_app/pages/__layout.svelte-a6a692c4.js">
+	<link rel="modulepreload" href="/_app/pages/__layout.svelte-71bc7182.js">
 	<link rel="modulepreload" href="/_app/chunks/constants-fb6fef14.js">
 	<link rel="modulepreload" href="/_app/chunks/Link-90aa2cf3.js">
 	<link rel="modulepreload" href="/_app/chunks/utils-a0fbfa6c.js">
@@ -22,8 +22,9 @@
 
 
 
+
 <header class="flex flex-1 justify-between p-4 max-w-6xl mx-auto"><a href="/" class="link">Samuel Plumppu</a>
-    <nav class="flex space-x-4"><a href="/blog" class="link">Blog</a><a href="/about" class="link">About</a><a href="/talks" class="link">Talks</a></nav></header>
+    <nav class="flex space-x-2 xs:space-x-4"><a href="/blog" class="link">Blog</a><a href="/about" class="link">About</a><a href="/talks" class="link">Talks</a></nav></header>
 
 <div class="container mx-auto max-w-6xl p-4 pb-0"><h1 class="text-4xl xs:text-5xl sm:text-6xl lg:text-7xl leading-none font-black tracking-tight mb-8">More about me
 </h1>
@@ -58,10 +59,10 @@
         <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn"><img src="/images/linkedin.svg" alt="LinkedIn" class="w-8 h-8"></a></div></footer>
 
 
-		<script type="module" data-hydrate="11jnc0x">
-		import { start } from "/_app/start-71357cc1.js";
+		<script type="module" data-hydrate="a7m86s">
+		import { start } from "/_app/start-53cf449b.js";
 		start({
-			target: document.querySelector('[data-hydrate="11jnc0x"]').parentNode,
+			target: document.querySelector('[data-hydrate="a7m86s"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
@@ -71,7 +72,7 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/pages/__layout.svelte-a6a692c4.js"),
+					import("/_app/pages/__layout.svelte-71bc7182.js"),
 						import("/_app/pages/about.svelte-8c51dc3b.js")
 				],
 				params: {},
