--- a/src/app.html
+++ b/src/app.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    %svelte.head%
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        %sveltekit.head%
+    </head>
 
-<body class="bg-honeydew">
-    <div id="svelte">%svelte.body%</div>
-</body>
+    <body class="bg-honeydew">
+        <div id="svelte">%sveltekit.body%</div>
+    </body>
 
-<style>
-    @media (prefers-reduced-motion: reduce) {
-        *,
-        *::before,
-        *::after {
-            transition-duration: 0.01ms !important;
-            animation-duration: 0.01ms !important;
-            animation-iteration-count: 1 !important;
-            animation-delay: 0.01ms !important;
+    <style>
+        @media (prefers-reduced-motion: reduce) {
+            *,
+            *::before,
+            *::after {
+                transition-duration: 0.01ms !important;
+                animation-duration: 0.01ms !important;
+                animation-iteration-count: 1 !important;
+                animation-delay: 0.01ms !important;
+            }
         }
-    }
-</style>
+    </style>
 </html>
