--- a/talks.html
+++ b/talks.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="content-security-policy" content=""><title>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta http-equiv="content-security-policy" content=""><title>
         Samuel Plumppu | Sustainability Entrepreneur &amp; Fullstack Developer
     </title>
-	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-a316ab4d.css">
-	<link rel="modulepreload" href="/_app/start-53cf449b.js">
-	<link rel="modulepreload" href="/_app/chunks/index-16cdd259.js">
-	<link rel="modulepreload" href="/_app/pages/__layout.svelte-71bc7182.js">
-	<link rel="modulepreload" href="/_app/chunks/constants-fb6fef14.js">
-	<link rel="modulepreload" href="/_app/chunks/Link-90aa2cf3.js">
-	<link rel="modulepreload" href="/_app/chunks/utils-a0fbfa6c.js">
-	<link rel="modulepreload" href="/_app/pages/talks/index.svelte-5919f570.js">
-</head>
+	<link rel="stylesheet" href="/_app/immutable/assets/pages/__layout.svelte-a316ab4d.css">
+	<link rel="modulepreload" href="/_app/immutable/start-3e219d8f.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/index-16cdd259.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-8e4f2bde.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/constants-fb6fef14.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/Link-90aa2cf3.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/utils-a0fbfa6c.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/talks/index.svelte-5919f570.js">
+    </head>
 
-<body class="bg-honeydew">
-    <div id="svelte">
+    <body class="bg-honeydew">
+        <div id="svelte">
 
 
 
@@ -54,10 +54,10 @@
         <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn"><img src="/images/linkedin.svg" alt="LinkedIn" class="w-8 h-8"></a></div></footer>
 
 
-		<script type="module" data-hydrate="jiv8vo">
-		import { start } from "/_app/start-53cf449b.js";
+		<script type="module" data-sveltekit-hydrate="jiv8vo">
+		import { start } from "/_app/immutable/start-3e219d8f.js";
 		start({
-			target: document.querySelector('[data-hydrate="jiv8vo"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="jiv8vo"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
@@ -66,27 +66,24 @@
 			hydrate: {
 				status: 200,
 				error: null,
-				nodes: [
-					import("/_app/pages/__layout.svelte-71bc7182.js"),
-						import("/_app/pages/talks/index.svelte-5919f570.js")
-				],
+				nodes: [0, 13],
 				params: {},
 				routeId: "talks"
 			}
 		});
 	</script><script type="application/json" sveltekit:data-type="props">{"allTalks":["2022-05-09-chalmers-entrepreneurship-inner-development","2021-09-11-hackforfuture-co-creation","2021-05-17-chalmers-sustainability-entrepreneurship"]}</script></div>
-</body>
+    </body>
 
-<style>
-    @media (prefers-reduced-motion: reduce) {
-        *,
-        *::before,
-        *::after {
-            transition-duration: 0.01ms !important;
-            animation-duration: 0.01ms !important;
-            animation-iteration-count: 1 !important;
-            animation-delay: 0.01ms !important;
+    <style>
+        @media (prefers-reduced-motion: reduce) {
+            *,
+            *::before,
+            *::after {
+                transition-duration: 0.01ms !important;
+                animation-duration: 0.01ms !important;
+                animation-iteration-count: 1 !important;
+                animation-delay: 0.01ms !important;
+            }
         }
-    }
-</style>
+    </style>
 </html>
