--- a/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
+++ b/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta http-equiv="content-security-policy" content=""><!-- HTML_TAG_START -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://cdn.jsdelivr.net/gh/slidevjs/slidev/assets/favicon.png">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@200;400;600&display=swap" type="text/css">
   <script type="module" crossorigin src="/talks/2022-05-09-chalmers-entrepreneurship-inner-development/assets/index.030be689.js"></script>
   <link rel="stylesheet" href="/talks/2022-05-09-chalmers-entrepreneurship-inner-development/assets/index.be5879df.css">
-</head>
-<body>
+<!-- HTML_TAG_END -->
+	<link rel="modulepreload" href="/_app/immutable/start-3e219d8f.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/index-16cdd259.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/__layout-raw.svelte-c01653c7.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/talks/_slug_/index@raw.svelte-2f63cd7e.js">
+    </head>
+
+    <body class="bg-honeydew">
+        <div id="svelte">
+
+
+
+
+<!-- HTML_TAG_START -->
   <div id="app"></div>
   
   
-</body>
+<!-- HTML_TAG_END -->
+
+
+		<script type="module" data-sveltekit-hydrate="mqq04e">
+		import { start } from "/_app/immutable/start-3e219d8f.js";
+		start({
+			target: document.querySelector('[data-sveltekit-hydrate="mqq04e"]').parentNode,
+			paths: {"base":"","assets":""},
+			session: {},
+			route: true,
+			spa: false,
+			trailing_slash: "ignore",
+			hydrate: {
+				status: 200,
+				error: null,
+				nodes: [2, 12],
+				params: {slug:"2022-05-09-chalmers-entrepreneurship-inner-development"},
+				routeId: "talks/[slug]@raw"
+			}
+		});
+	</script><script type="application/json" sveltekit:data-type="props">{"talk":"\u003C!DOCTYPE html>\n\u003Chtml lang=\"en\">\n\u003Chead>\n  \u003Cmeta charset=\"UTF-8\">\n  \u003Cmeta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n  \u003Clink rel=\"icon\" href=\"https://cdn.jsdelivr.net/gh/slidevjs/slidev/assets/favicon.png\">\n\u003Clink rel=\"stylesheet\" href=\"https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@200;400;600&display=swap\" type=\"text/css\">\n  \u003Cscript type=\"module\" crossorigin src=\"/talks/2022-05-09-chalmers-entrepreneurship-inner-development/assets/index.030be689.js\">\u003C/script>\n  \u003Clink rel=\"stylesheet\" href=\"/talks/2022-05-09-chalmers-entrepreneurship-inner-development/assets/index.be5879df.css\">\n\u003C/head>\n\u003Cbody>\n  \u003Cdiv id=\"app\">\u003C/div>\n  \n  \n\u003C/body>\n\u003C/html>\n"}</script></div>
+    </body>
+
+    <style>
+        @media (prefers-reduced-motion: reduce) {
+            *,
+            *::before,
+            *::after {
+                transition-duration: 0.01ms !important;
+                animation-duration: 0.01ms !important;
+                animation-iteration-count: 1 !important;
+                animation-delay: 0.01ms !important;
+            }
+        }
+    </style>
 </html>
