--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
         %sveltekit.head%
     </head>
 
-    <body class="bg-honeydew">
+    <body class="bg-honeydew" data-sveltekit-prefetch>
         <div id="svelte">%sveltekit.body%</div>
     </body>
 </html>
