--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-ae4cccfe.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-081f5ca1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-9503b135.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-bdbe5925.js">
+		<link href="./_app/immutable/assets/_layout-a8e54596.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-b89f8648.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-a38481fa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-414646d1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-d08bfe67.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-8c4365dc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants-94f7c113.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Link-6b9d6e3a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Link-83ec29f2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils-0976737d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-de4d55d8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/PostListing-6353f649.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Tags-709ab23c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Picture-f22aecae.js"><title>
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-c37e8107.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/PostListing-dc85fc22.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Tags-8899faef.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Picture-9ac19cb3.js"><title>
         Samuel Plumppu | Sustainability Entrepreneur &amp; Fullstack Developer
     </title><!-- HEAD_svelte-ffrimp_START --><!-- HEAD_svelte-ffrimp_END -->
     </head>
@@ -131,17 +131,18 @@
 
 
 		<script type="module" data-sveltekit-hydrate="1j6v0n">
-			import { start } from "./_app/immutable/start-081f5ca1.js";
+			import { start } from "./_app/immutable/start-b89f8648.js";
 
 			start({
+				assets: "",
 				env: {},
-				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1j6v0n"]').parentNode,
-				version: "1672679886083",
+				version: "1676326192821",
 				hydrate: {
 					node_ids: [0, 2],
-					data: [null,{type:"data",data:{featuredPosts:[{title:"Use the Web Crypto API to Generate a Cryptographically Secure Password in the Browser and Node.js",date:new Date(1627430400000),tags:["JavaScript","Web Crypto API","Node.js"],featured:true,slug:"generate-password-in-browser-web-crypto-api"}]},uses:{}}],
-					form: null
+					data: [{type:"data",data:null,uses:{},slash:"ignore"},{type:"data",data:{featuredPosts:[{title:"Use the Web Crypto API to Generate a Cryptographically Secure Password in the Browser and Node.js",date:new Date(1627430400000),tags:["JavaScript","Web Crypto API","Node.js"],featured:true,slug:"generate-password-in-browser-web-crypto-api"}]},uses:{}}],
+					form: null,
+					error: null
 				}
 			});
 		</script>
