--- a/talks/2021-05-17-chalmers-sustainability-entrepreneurship/index.html
+++ b/talks/2021-05-17-chalmers-sustainability-entrepreneurship/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta http-equiv="content-security-policy" content="">
+		<link href="../../_app/immutable/assets/_layout-a8e54596.css" rel="stylesheet">
+		<link rel="modulepreload" href="../../_app/immutable/start-b89f8648.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/index-a38481fa.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/singletons-414646d1.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/preload-helper-41c905a7.js">
+		<link rel="modulepreload" href="../../_app/immutable/components/pages/_layout.svelte-8c4365dc.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/constants-94f7c113.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Link-83ec29f2.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/utils-0976737d.js">
+		<link rel="modulepreload" href="../../_app/immutable/components/pages/talks/_slug_/_page.svelte-503ebfce.js"><!-- HEAD_svelte-g2unnv_START --><!-- HTML_TAG_START -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/talks/2021-05-17-chalmers-sustainability-entrepreneurship/assets/8b9eb19119592679c97707c257d88026.a02f38e2.png">
@@ -8,10 +21,39 @@
   <script type="module" crossorigin src="/talks/2021-05-17-chalmers-sustainability-entrepreneurship/assets/index.ef644bfc.js"></script>
     <link rel="modulepreload" href="/talks/2021-05-17-chalmers-sustainability-entrepreneurship/assets/vendor.8652a162.js">
     <link rel="stylesheet" href="/talks/2021-05-17-chalmers-sustainability-entrepreneurship/assets/vendor.86eee491.css">
-  </head>
-<body>
+  <!-- HTML_TAG_END --><!-- HEAD_svelte-g2unnv_END -->
+    </head>
+
+    <body class="bg-honeydew" data-sveltekit-prefetch>
+        <div id="svelte">
+
+
+
+
+
+<!-- HTML_TAG_START -->
   <div id="app"></div>
   
   
-</body>
+<!-- HTML_TAG_END -->
+
+
+		<script type="module" data-sveltekit-hydrate="146pk9g">
+			import { start } from "../../_app/immutable/start-b89f8648.js";
+
+			start({
+				assets: "",
+				env: {},
+				target: document.querySelector('[data-sveltekit-hydrate="146pk9g"]').parentNode,
+				version: "1676326192821",
+				hydrate: {
+					node_ids: [0, 8],
+					data: [{type:"data",data:null,uses:{},slash:"ignore"},{type:"data",data:{talk:"\u003C!DOCTYPE html\u003E\n\u003Chtml lang=\"en\"\u003E\n\u003Chead\u003E\n  \u003Cmeta charset=\"UTF-8\"\u003E\n  \u003Cmeta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\"\u003E\n  \u003Clink rel=\"icon\" type=\"image\u002Fpng\" href=\"\u002Ftalks\u002F2021-05-17-chalmers-sustainability-entrepreneurship\u002Fassets\u002F8b9eb19119592679c97707c257d88026.a02f38e2.png\"\u003E\n  \n  \u003Cscript type=\"module\" crossorigin src=\"\u002Ftalks\u002F2021-05-17-chalmers-sustainability-entrepreneurship\u002Fassets\u002Findex.ef644bfc.js\"\u003E\u003C\u002Fscript\u003E\n    \u003Clink rel=\"modulepreload\" href=\"\u002Ftalks\u002F2021-05-17-chalmers-sustainability-entrepreneurship\u002Fassets\u002Fvendor.8652a162.js\"\u003E\n    \u003Clink rel=\"stylesheet\" href=\"\u002Ftalks\u002F2021-05-17-chalmers-sustainability-entrepreneurship\u002Fassets\u002Fvendor.86eee491.css\"\u003E\n  \u003C\u002Fhead\u003E\n\u003Cbody\u003E\n  \u003Cdiv id=\"app\"\u003E\u003C\u002Fdiv\u003E\n  \n  \n\u003C\u002Fbody\u003E\n\u003C\u002Fhtml\u003E\n"},uses:{params:["slug"]},slash:"always"}],
+					form: null,
+					error: null
+				}
+			});
+		</script>
+	</div>
+    </body>
 </html>
