--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        %sveltekit.head%
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="/images/favicon-32x32.png" type="image/png" />
+    <link rel="icon" href="/images/favicon.ico" />
+    <meta name="theme-color" content="#5ac75f" />
+    <link rel="apple-touch-icon" sizes="32x32" href="/images/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="48x48" href="/images/compass-icon-square.svg" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/images/compass-icon-square.svg" />
+    <link rel="apple-touch-icon" sizes="96x96" href="/images/compass-icon-square.svg" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/images/compass-icon-square.svg" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/images/compass-icon-square.svg" />
+    <link rel="apple-touch-icon" sizes="256x256" href="/images/compass-icon-square.svg" />
+    <link rel="apple-touch-icon" sizes="384x384" href="/images/compass-icon-square.svg" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/images/compass-icon-square.svg" />
+    <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
+    %sveltekit.head%
+</head>
 
-    <body class="bg-honeydew" data-sveltekit-prefetch>
-        <div id="svelte">%sveltekit.body%</div>
-    </body>
+<body class="bg-honeydew" data-sveltekit-prefetch>
+    <div id="svelte">%sveltekit.body%</div>
+</body>
+
 </html>
