--- a/talks.html
+++ b/talks.html
@@ -19,12 +19,12 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.d5de85c7.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ed27f1d3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e0482577.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcc872af.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ac1b1b60.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.40acc262.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e7a236db.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.da2eab39.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.ad8ed372.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.a0f71b58.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.94f7c113.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link.cdc7cac1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.0976737d.js">
@@ -63,7 +63,7 @@
     
     <a href="#" class="bg-mantis py-3 px-8 inline-flex rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black justify-center"><span class="whitespace-nowrap">Show Email</span></a>
 
-    <p class="mt-8">Samuel Plumppu © 2015 - 2023</p>
+    <p class="mt-8">© 2015 - 2023 Samuel Plumppu</p>
 
     <div class="flex justify-center space-x-8 items-center my-8 flex-wrap"><a href="https://matrix.to/#/@Greenheart:matrix.org" target="_blank" rel="noopener noreferrer" aria-label="Message me securely with the Matrix protocol"><img src="/images/matrix-logo.svg" alt="Matrix.org logo" class="h-8"></a>
         <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer" aria-label="See my free software at GitHub"><img src="/images/github.svg" alt="GitHub" class="w-8 h-8"></a>
@@ -76,7 +76,7 @@
 			
 			<script>
 				{
-					__sveltekit_jmldvf = {
+					__sveltekit_1ram9xa = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -85,10 +85,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{talks:["2021-05-17-chalmers-sustainability-entrepreneurship","2021-09-11-hackforfuture-co-creation","2022-05-09-chalmers-entrepreneurship-inner-development"]},"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ed27f1d3.js"),
-						import("./_app/immutable/entry/app.40acc262.js")
+						import("./_app/immutable/entry/start.e0482577.js"),
+						import("./_app/immutable/entry/app.da2eab39.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_jmldvf.element, {
+						kit.start(app, __sveltekit_1ram9xa.element, {
 							node_ids: [0, 7],
 							data,
 							form: null,
