--- a/talks/2021-09-11-hackforfuture-co-creation/index.html
+++ b/talks/2021-09-11-hackforfuture-co-creation/index.html
@@ -19,12 +19,12 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="../../_app/immutable/assets/0.17523473.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.f031c9c4.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.e874ef6e.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/index.21b00dcf.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/singletons.93f4804b.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.2741b21e.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/singletons.449556af.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.5f945427.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/0.4c25021c.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/0.3178882d.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/constants.94f7c113.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Link.c3d01ee6.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/utils.0976737d.js">
@@ -56,7 +56,7 @@
 			
 			<script>
 				{
-					__sveltekit_1cjexfe = {
+					__sveltekit_150le6p = {
 						base: new URL("../..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -66,8 +66,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{talk:"\u003C!DOCTYPE html\u003E\n\u003Chtml lang=\"en\"\u003E\n\u003Chead\u003E\n  \u003Cmeta charset=\"UTF-8\"\u003E\n  \u003Cmeta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\"\u003E\n  \u003Clink rel=\"icon\" type=\"image\u002Fpng\" href=\"\u002Ftalks\u002F2021-09-11-hackforfuture-co-creation\u002Fassets\u002F8b9eb19119592679c97707c257d88026.a02f38e2.png\"\u003E\n  \n  \u003Cscript type=\"module\" crossorigin src=\"\u002Ftalks\u002F2021-09-11-hackforfuture-co-creation\u002Fassets\u002Findex.5eda9672.js\"\u003E\u003C\u002Fscript\u003E\n    \u003Clink rel=\"modulepreload\" href=\"\u002Ftalks\u002F2021-09-11-hackforfuture-co-creation\u002Fassets\u002Fvendor.05888ba9.js\"\u003E\n    \u003Clink rel=\"stylesheet\" href=\"\u002Ftalks\u002F2021-09-11-hackforfuture-co-creation\u002Fassets\u002Fvendor.05ec87bc.css\"\u003E\n  \u003C\u002Fhead\u003E\n\u003Cbody\u003E\n  \u003Cdiv id=\"app\"\u003E\u003C\u002Fdiv\u003E\n  \n  \n\u003C\u002Fbody\u003E\n\u003C\u002Fhtml\u003E\n"},"uses":{"params":["slug"]},"slash":"always"}];
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.f031c9c4.js"),
-						import("../../_app/immutable/entry/app.2741b21e.js")
+						import("../../_app/immutable/entry/start.e874ef6e.js"),
+						import("../../_app/immutable/entry/app.5f945427.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
