--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.17523473.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.f031c9c4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e874ef6e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.21b00dcf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.93f4804b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.2741b21e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.449556af.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.5f945427.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.4c25021c.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.3178882d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.94f7c113.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link.c3d01ee6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.0976737d.js">
@@ -144,7 +144,7 @@
 			
 			<script>
 				{
-					__sveltekit_1cjexfe = {
+					__sveltekit_150le6p = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -154,8 +154,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{featuredPosts:[{title:"Use the Web Crypto API to Generate a Cryptographically Secure Password in the Browser and Node.js",date:new Date(1627430400000),tags:["JavaScript","Web Crypto API","Node.js"],featured:true,slug:"generate-password-in-browser-web-crypto-api"}]},"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.f031c9c4.js"),
-						import("./_app/immutable/entry/app.2741b21e.js")
+						import("./_app/immutable/entry/start.e874ef6e.js"),
+						import("./_app/immutable/entry/app.5f945427.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
